fix/agregar overflow-x: hidden a <main>

--- a/styles/index.css
+++ b/styles/index.css
@@ -48,6 +48,7 @@ body {
 main {
     position: relative;
     z-index: 2;
+    overflow-x: hidden;
 }
 header {
     min-height: 2rem;
